// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lane V1 — the phone is unchanged (golden, 390 wide) DatePickerModal, visible — ios 390, dark 1`] = `
{
  "lines": 209,
  "sha256": "99820c63ec8aa2b4728af05d5192db0058f92b0a9b1959b8707a22df24b17488",
}
`;

exports[`lane V1 — the phone is unchanged (golden, 390 wide) DatePickerModal, visible — ios 390, light 1`] = `
{
  "lines": 209,
  "sha256": "cae46dd5e14f347aecb6edae88dc057969d6506b1af54ede82ee6db88fc03621",
}
`;

exports[`lane V1 — the phone is unchanged (golden, 390 wide) DatePickerModal, visible — web 390, dark 1`] = `
{
  "lines": 209,
  "sha256": "99820c63ec8aa2b4728af05d5192db0058f92b0a9b1959b8707a22df24b17488",
}
`;

exports[`lane V1 — the phone is unchanged (golden, 390 wide) DatePickerModal, visible — web 390, light 1`] = `
{
  "lines": 209,
  "sha256": "cae46dd5e14f347aecb6edae88dc057969d6506b1af54ede82ee6db88fc03621",
}
`;

exports[`lane V1 — the phone is unchanged (golden, 390 wide) SidePanel phone branch, open with a tab row — ios 390 1`] = `
{
  "lines": 23,
  "sha256": "da632b69f51bd78d6ab3193392233c28fb4b678163c1ffda5493d813a2fa4e2d",
}
`;

exports[`lane V1 — the phone is unchanged (golden, 390 wide) VoiceCaptureModal, visible — ios 390, dark 1`] = `
{
  "lines": 66,
  "sha256": "febce1470069edab9ea617cb82c2cd6de96ed3f623beec0de03903e8d06c35c9",
}
`;

exports[`lane V1 — the phone is unchanged (golden, 390 wide) VoiceCaptureModal, visible — ios 390, light 1`] = `
{
  "lines": 66,
  "sha256": "6ee366821edbc8d38f17448ac97b1432ddb5420181bb5ae33b4ef95a23944301",
}
`;
